# chat-langchain

./: docker-compose.yml  pyproject.toml
backend/: chain.py  ingest.py  parser.py
frontend/app/: globals.css  layout.tsx
frontend/app/components/: AutoResizeTextarea.tsx  ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  InlineCitation.tsx  SourceBubble.tsx
frontend/app/utils/: constants.tsx  metadata.ts  sendFeedback.tsx
notebooks/: 6.0.0 _ Документация RuStore.html  test.html  test_docs.ipynb
